<resources>
    <string name="app_name">Demo Application</string>
    <string name="background">background</string>
    <string name="movies">Movies</string>
    <string name="hey_user">Hey User,</string>
    <string name="start_watching_now">Start watching now</string>
    <string name="top_five">Top five</string>
    <string name="honourable_mentions">Honourable mentions</string>
    <string name="make_you_an_offer_you_can_t_refuse">Make you an offer you can\'t refuse</string>
</resources>
